--- a/example.com/example.html
+++ b/example.com/example.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Welcome to nginx!</title>
+<title>Welcome to nginx!!</title>
 <style>
     body {
         width: 35em;
