--- a/example.com/example.html
+++ b/example.com/example.html
@@ -11,7 +11,7 @@
 </style>
 </head>
 <body>
-<h1>Welcome to nginx!</h1>
+<h1>Welcome to nginx! УСЫ!</h1>
 <p><a href="/anotherport">To go to the site with another port but with nginx CLICK HERE</p>
 <p><a href="/music/music.mp3" download="">To dowload a funny song CLICK HERE</p>
 <p><a href="/secondserver">To go to another server CLICK HERE</p>
